--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fillfire - Your Website Holding</title>
+    <title>Fillfire - Empowering Digital Solutions</title>
     <style>
         body {
             margin: 0;
@@ -83,18 +82,18 @@
     <div class="container">
         <div class="section" id="about">
             <h2>About Fillfire</h2>
-            <p>Fillfire is your trusted partner in managing and showcasing your websites. We connect your digital assets under one roof for maximum impact and efficiency.</p>
+            <p>Fillfire is dedicated to creating innovative websites and applications designed to benefit people worldwide. Our mission is to harness technology to empower and inspire.</p>
         </div>
 
         <div class="section" id="projects">
             <h2>Our Projects</h2>
-            <p>Discover our family of websites designed to serve various needs and audiences. Each site reflects our commitment to quality and innovation.</p>
+            <p>Explore our diverse range of websites and applications aimed at solving real-world problems and enhancing digital experiences for everyone.</p>
             <img src="projects.jpg" alt="Our Projects" style="width: 100%; border-radius: 8px; margin-top: 10px;">
         </div>
 
         <div class="section" id="contact">
             <h2>Contact Us</h2>
-            <p>Email us at <a href="mailto:info@fillfire.com">info@fillfire.com</a> for more information about our services and projects.</p>
+            <p>Email us at <a href="mailto:info@fillfire.com">info@fillfire.com</a> to learn more about our projects and how we can collaborate to create impactful digital solutions.</p>
         </div>
     </div>
 
