--- a/index.html
+++ b/index.html
@@ -177,6 +177,36 @@
                     <h3>Editonya</h3>
                     <p>Editonya ise hala açılması planlanan, edit vb. şeyler yaptığımız web sitesi ve sosyal medya hesabıdır.</p>
                 </div>
+                <div class="project-item">
+                    <img src="lordies.png" alt="Lordies">
+                    <h3>Lordies</h3>
+                    <p>Lordies ilk arama motorumuzdur, çoklu siteye yönlendirme özelliği ile birlikte hizmet verir.</p>
+                </div>
+                <div class="project-item">
+                    <img src="beraberlikyayınları.png" alt="Beraberlik Yayınları">
+                    <h3>Beraberlik Yayınları</h3>
+                    <p>İlk kitap yayıncılığımız Beraberlik Yayınları, öğreticimiz Harikanın ders kitaplarından oluşmaktadır.</p>
+                </div>
+                <div class="project-item">
+                    <img src="neontv.png" alt="Neon Tv">
+                    <h3>Neon Tv</h3>
+                    <p>Neon Tv, televizyon gibi canlı TV ve Netflix gibi platformlara yönlendiren yönlendirme sitesidir.</p>
+                </div>
+                <div class="project-item">
+                    <img src="frogg.png" alt="Frogg">
+                    <h3>Frogg</h3>
+                    <p>Frogg, okullarda da kullanılabilir olarak yapılmış ders anlatma ve çoğu şeye yardımcı bir sitedir.</p>
+                </div>
+                <div class="project-item">
+                    <img src="işyerimde.png" alt="İş Yerimde">
+                    <h3>İş Yerimde</h3>
+                    <p>İş Yerimde, son dakika haberleri, Google Forms, Google Docs ve daha fazlasını yönlendirebileceğiniz bir platformdur.</p>
+                </div>
+                <div class="project-item">
+                    <img src="maçbol.png" alt="Maçbol">
+                    <h3>Maçbol</h3>
+                    <p>Maçbol, spor haberleri içeren ilk spor haberler sitemizdir.</p>
+                </div>
             </div>
         </div>
 
